Game win modal added.Overflow changed to hidden preventing scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -679,7 +679,7 @@ justify-content: center;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 1;
-    overflow: auto;
+    overflow: hidden;
     top: 0;
     left: 0;
     animation-name: fadeIn;
@@ -781,5 +781,113 @@ justify-content: center;
 @media only screen and (min-width:1168px) and (max-width:1440px) {
     .noWin-content{
     width: 25%;
+    }
+}
+
+
+/* Game Won modal */
+.win-modal{
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    animation-name: fadeIn;
+    animation-duration: 0.3s;
+}
+
+@keyframes fadeIn{
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+
+.win-content{
+    width: 40%;
+    background-color: #f3ff38;
+    color: #000;
+    margin: 30% auto;
+    padding: 10px;
+    border-radius: 5px;
+    font-family: "Chicle", "Open-Sans";
+    position: relative;
+    top: 0;
+    animation: slide 1.2s linear;
+}
+
+@keyframes slide {
+  from {top: -100%;}
+  to {top: 0;}
+}
+
+.win-title {
+    text-align: center;
+    font-size: 25px;
+    margin-bottom: 0;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.fa-laugh-beam{
+    animation: rotate 3s linear infinite;
+    text-align: center;
+    display: inline-table;
+}
+
+@keyframes rotate{
+		from {
+			transform: rotate(0deg);
+		}
+		to {
+			transform: rotate(359deg);
+        }
+}        
+
+
+.win-body{
+    text-align: center;
+}
+
+.win-footer{
+    display: flex;
+    justify-content: space-evenly;
+    font-size: 15px;
+    height: 35px;
+}
+
+#iDoBtn{
+    background-color:  #24FF00;
+    width: 15%;
+    font-size: larger;
+}
+
+#iDontBtn{
+    background-color:#f92f26;
+    width: 15%;
+    font-size: larger;
+}
+
+@media only screen and (min-width:320px) and (max-width:750px) {
+    .win-content{
+    width: 55%;
+    }
+}
+
+@media only screen and (min-width:751px) and (max-width:949px) {
+    .win-content{
+    width: 48%;
+    }
+}
+
+@media only screen and (min-width:950px) {
+    .win-content{
+    width: 38%;
     }
 }
